force-app/main/default/objects/Training_Topic__c/Training_Topic__c.object-meta.xml
<CustomObject>
    <description>For https://wiki.u-blox.com/bin/view/Generic/IT/OpenIssues55453</description>
    <label>Training Topic</label>
    <nameField>
        <label>Training Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>