force-app/main/default/objects/Training_Topic__c/fields/Duration_Day__c.field-meta.xml
<CustomField>
    <fullName>Duration_Day__c</fullName>
    <label>Duration (Day)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>