force-app/main/default/objects/Training_Topic__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Topic</relationshipName>
    <type>Lookup</type>
</CustomField>