force-app/main/default/objects/Training_Topic__c/fields/Training_Event__c.field-meta.xml
<CustomField>
    <fullName>Training_Event__c</fullName>
    <label>Training Event</label>
    <referenceTo>Training_Event__c</referenceTo>
    <relationshipLabel>Training Topic</relationshipLabel>
    <relationshipName>Training_Topic</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>